correct text font sizes on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -180,10 +180,14 @@ nav ul li a:hover {
 	}
 
 	.text h2 {
-		font-size: 3em;
+		font-size: 40px;
 	}
 
 	.text h3 {
-		font-size: 2em;
+		font-size: 28px;
+	}
+
+	.text p {
+		font-size: 16px;
 	}
 }
